@@ -1,1 +1,1 @@
-synce: syncevfs
+synce: libsyncevfs
